--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Smart Delete",
     "description": "smartly remove empty lines/spaces when using delete or backspace ",
     "publisher": "ctf0",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "engines": {
         "vscode": "^1.41.0"
     },
@@ -24,6 +24,11 @@
                     "type": "boolean",
                     "default": true,
                     "description": "keep one empty space after removal"
+                },
+                "smart-delete.keepOneLine": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "keep one empty line after removal"
                 }
             }
         },
