--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Smart Delete",
     "description": "smartly remove empty lines/spaces when using delete or backspace ",
     "publisher": "ctf0",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "engines": {
         "vscode": "^1.41.0"
     },
@@ -30,6 +30,11 @@
                     "type": "boolean",
                     "default": false,
                     "description": "keep one empty line after removal"
+                },
+                "smart-delete.formatAfterNewLine": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "use `editor.action.formatDocument` to correct the indentation when using `keepOneLine`"
                 }
             }
         },
