--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
     "displayName": "Smart Delete",
     "description": "smartly remove empty lines/spaces when using delete or backspace ",
     "publisher": "ctf0",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "engines": {
-        "vscode": "^1.41.0"
+        "vscode": "^1.51.0"
     },
     "categories": [
         "Other"
     ],
     "repository": "https://github.com/ctf0/vscode-smart-delete",
     "activationEvents": [
-        "onCommand:smart-delete.right",
-        "onCommand:smart-delete.left"
+        "onCommand:smartDelete.right",
+        "onCommand:smartDelete.left"
     ],
     "main": "./extension.js",
     "contributes": {
@@ -21,22 +21,22 @@
             "title": "Smart Delete",
             "type": "object",
             "properties": {
-                "smart-delete.keepOneSpace": {
+                "smartDelete.keepOneSpace": {
                     "type": "boolean",
                     "default": true,
                     "description": "keep one empty space after removal"
                 },
-                "smart-delete.keepOneLine": {
+                "smartDelete.keepOneLine": {
                     "type": "boolean",
                     "default": false,
                     "description": "keep one empty line after removal"
                 },
-                "smart-delete.formatAfterNewLine": {
+                "smartDelete.formatAfterNewLine": {
                     "type": "boolean",
                     "default": false,
                     "description": "use `editor.action.formatDocument` to correct the indentation when using `keepOneLine`"
                 },
-                "smart-delete.charPairs": {
+                "smartDelete.charPairs": {
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -54,54 +54,51 @@
         },
         "commands": [
             {
-                "command": "smart-delete.right",
+                "command": "smartDelete.right",
                 "title": "Smart Delete: right remove"
             },
             {
-                "command": "smart-delete.left",
+                "command": "smartDelete.left",
                 "title": "Smart Delete: left remove"
             }
         ],
         "menus": {
             "commandPalette": [
                 {
-                    "command": "smart-delete.right",
+                    "command": "smartDelete.right",
                     "when": "editorIsOpen"
                 },
                 {
-                    "command": "smart-delete.left",
+                    "command": "smartDelete.left",
                     "when": "editorIsOpen"
                 }
             ]
         },
         "keybindings": [
             {
-                "command": "smart-delete.right",
+                "command": "smartDelete.right",
                 "key": "delete",
                 "mac": "delete",
                 "when": "editorTextFocus"
             },
             {
-                "command": "smart-delete.left",
+                "command": "smartDelete.left",
                 "key": "backspace",
                 "mac": "backspace",
                 "when": "editorTextFocus"
             }
         ]
     },
-    "scripts": {
-        "test": "node ./test/runTest.js"
-    },
     "devDependencies": {
-        "@types/glob": "^7.1.1",
-        "@types/mocha": "^5.2.7",
-        "@types/node": "^12.11.7",
-        "@types/vscode": "^1.41.0",
-        "eslint": "^6.6.0",
-        "glob": "^7.1.5",
-        "mocha": "^6.2.2",
-        "typescript": "^3.6.4",
-        "vscode-test": "^1.2.2"
+        "@types/glob": "^7.1.3",
+        "@types/mocha": "^8.0.4",
+        "@types/node": "^14.14.10",
+        "@types/vscode": "^1.51.0",
+        "eslint": "^7.15.0",
+        "glob": "^7.1.6",
+        "mocha": "^8.2.1",
+        "typescript": "^4.1.2",
+        "vscode-test": "^1.4.1"
     },
     "dependencies": {}
 }
